Structural changes to api, add document routes/controllers, fix application definitions, miscellaneous UI fixes for swagger.
